<resources>
    <string name="app_name">Teach App!</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- Main Page -->
    <string name="text_main_intro_text">ברוכים הבאים להדגמה שלנו! בחרו מהנושאים הבאים:</string> <!-- text shown at the start of the application, in the main menu. -->
    <string name="button_layout_redirect_text">layout tutorial</string>
    <string name="button_intent_redirect_text">intents tutorial</string>
    <string name="button_conversation_box_redirect_text">conversation box tutorial </string>
    <string name="button_menu_redirect_text">menu tutorial</string>
    <string name="button_dialogue_redirect_text">dialogue tutorial</string>
    <string name="button_shared_preferences_redirect_text">shared preferences tutorial</string>
    <string name="button_content_providers_redirect_text">content providers tutorial</string>
    <string name="button_phone_components_redirect_text">phone components tutorial</string>
    <string name="button_list_view_redirect_text">listview tutorial</string>
    <string name="button_dynamic_code_redirect_text">dynamic code tutorial</string>

    <!-- Layout Tutorial -->
        <!-- Constraint Layout -->
        <string name="text_layouts_intro1_text">באנדרואיד, יש כמה סוגים של layouts (מערכים). אחד מהכי פופולריים הוא constraint layout. בסוג זה ניתן לעגן כל אובייקט לאובייקט אחר, כולל לאובייקט ההורה.</string>
        <string name="text_layouts_intro2_text">כך אפשר לסדר אובייקטים שונים</string>
        <string name="text_layouts_intro3_text">בצורה נוחה ויפה מאוד.</string>
        <string name="button_layouts_intro_next_text">הבא</string>

        <!-- Linear Layout -->
        <string name="text_layouts_linear1_text">במערך לינארי האובייקטים מסודרים בצורה אנכית או אופקית אחד אחרי השני.</string>
        <string name="text_layouts_linear2_text">ככה זה נראה כשזה מסודר בצורה אנכית.</string>
        <string name="text_layouts_linear3_text">אפשר להגדיר לכל אובייקט את הרוחב והגובה, כמו בכל מערך אחר,</string>
        <string name="text_layouts_linear4_text">אבל האובייקטים תמיד יגיעו אחד אחרי השני בסדר, ולעולם לא יהיו אחד לצד השני.</string>
        <string name="button_layouts_linear_next_text">הבא</string>

        <!-- Relative Layout -->
        <string name="text_layouts_relative1_text">מערך יחסי עובד מאוד דומה למערך constraint,</string>
        <string name="text_layouts_relative2">אבל כל אובייקט מקושר לאובייקט אחר ולא למערך עצמו.</string>
        <string name="button_layouts_relative_next">חזרה</string>

    <!--Conversation Tutorial-->
    <string name="edit_conv_input_hint">Input</string>
    <string name="button_conv_update_text">Change</string>
    <string name="text_conv_output_text">Output</string>

    <!-- Intents Tutorial -->
    <string name="button_intents_email_text">send an email</string>
    <string name="button_intents_sms_text">send an sms</string>
    <string name="button_intents_phone_text">call someone</string>
    <string name="button_intents_web_text">open a website</string>
    <string name="button_intents_yt_text">youtube</string>

        <!-- Email Intent -->
    <string name="edit_intents_email_recipient_hint">To:</string>
        <string name="edit_intents_email_subject_hint">Subject</string>
        <string name="edit_intents_email_message_hint">Message</string>
        <string name="button_intents_email_cancel_text">cancel</string>
        <string name="button_intents_email_send_text">send</string>

        <!-- SMS Intent -->
        <string name="edit_intents_sms_recipient_hint">To:</string>
        <string name="edit_intents_sms_message_hint">Message</string>
        <string name="button_intents_sms_send_text">send-</string>

        <!-- Phone Intent -->
        <string name="edit_intents_phone_number_hint">Phone Number:</string>
        <string name="button_intents_phone_call_text">Call</string>

        <!-- Web Intent -->
        <string name="radio_intents_web_google_text">Google</string>
        <string name="radio_intents_web_stack_overflow_text">Stack Overflow</string>
        <string name="radio_intents_web_github_text">Github</string>
        <string name="radio_intents_web_proof_text">The Proof Is Trivial</string>
        <string name="radio_intents_web_bing_text">Bing</string>
        <string name="button_intents_web_launch_text">launch!</string>

    <!-- Conversation Box Tutorial -->

    <!-- Menu Tutorial -->
        <!--Textbox prompt-->
        <string name="text_menu_prompt_text">השתמשו בתפריט מעלה כדי לשנות את תוכן הטקסט, או לחצו עליי לחיצה ארוכה כדי לשנות את הצבע שלו.</string>

        <!--Options Menu options-->
        <string name="meni_example_option_3_text">"Hello World"</string>
        <string name="meni_example_option_2_text">Forty Two!</string>
        <string name="meni_example_option_1_text">TEST</string>

        <!--Context Menu Options-->
        <string name="meni_blue_text">Blue</string>
        <string name="meni_green_text">Green</string>
        <string name="meni_red_text">Red</string>

    <!-- Dialogue Tutorial -->
    <string name="button_dialogue_alert_text">alert</string>
    <string name="button_dialogue_date_text">date</string>
    <string name="button_dialogue_time_text">time</string>
    <string name="text_dialogue_info_text">you chose:</string>
    <string name="text_dialogue_output_text"></string>

    <!-- Shared Preferences Tutorial -->
        <!--Radio Options -->
        <string name="radio_sp_option_1">42</string>
        <string name="radio_sp_option_2">42</string>
        <string name="radio_sp_option_3">42</string>

        <!--Prompts-->
        <string name="text_sp_radio_prompt">What is your favorite number?</string>
        <string name="check_sp_boolean_prompt">ARE YOU HAPPY?</string>
        <string name="text_sp_number_prompt_hint">How old are you?</string>
        <string name="text_sp_string_prompt_hint">Your favorite type of sock??</string>


    <!--Button-->
    <string name="button_sp_save">Save</string>


    <!-- Content Providers Tutorial -->
    <string name="button_providers_new_event_text">new event</string>
    <string name="button_providers_new_contact_text">new contact</string>

        <!-- New Event -->
        <string name="edit_providers_new_event_title_hint">Title:</string>
        <string name="edit_providers_new_event_description_hint">Description:</string>
        <string name="button_providers_new_event_start_text">starting time</string>
        <string name="button_providers_new_event_end_text">ending time</string>
        <string name="edit_providers_new_event_location_hint">Location:</string>
        <string name="button_providers_new_event_save_text">save event</string>

        <!-- New Contact -->
        <string name="edit_providers_new_contact_name_hint">Name:</string>
        <string name="edit_providers_new_contact_email_hint">Email:</string>
        <string name="edit_providers_new_contact_phone_hint">Phone:</string>
        <string name="button_providers_new_contact_save_text">save contact</string>

    <!-- Phone Components Tutorial -->
        <!--Buttons Text-->
        <string name="button_comp_gps">Where am I?</string>
        <string name="button_comp_camera">Take a Picture</string>
        <string name="button_comp_media">Open media</string>

        <!--Text Prompts-->


        <!--Location Default-->
        <string name="text_pc_location_error_text">Unknown</string>

    <!-- List View Tutorial -->
    <string name="text_listview_input_prompt_hint">value 1, value 2, value3…</string>
    <string name="button_listview_submit_text">Update List</string>

    <!-- Dynamic Code Tutorial -->

</resources>