<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- the title of the event -->
    <EditText
        android:id="@+id/edit_providers_new_event_title"
        android:hint="@string/edit_providers_new_event_title_hint"
        android:inputType="text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- the description of the event -->
    <EditText
        android:id="@+id/edit_providers_new_event_description"
        android:hint="@string/edit_providers_new_event_description_hint"
        android:inputType="textMultiLine"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_providers_new_event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_providers_new_event_start"
        android:text="@string/button_providers_new_event_start_text"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_providers_new_event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_providers_new_event_end" />

    <Button
        android:id="@+id/button_providers_new_event_end"
        android:text="@string/button_providers_new_event_end_text"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_providers_new_event_description"
        app:layout_constraintStart_toEndOf="@id/button_providers_new_event_start"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_providers_new_event_location"
        android:hint="@string/edit_providers_new_event_location_hint"
        android:inputType="text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/button_providers_new_event_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_providers_new_event_save"
        android:text="@string/button_providers_new_event_save_text"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>