<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_intents_email_recipient"
        android:hint="@string/edit_intents_email_recipient_hint"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_intents_email_subject"
        android:hint="@string/edit_intents_email_subject_hint"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_intents_email_recipient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_intents_email_message"
        android:hint="@string/edit_intents_email_message_hint"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_intents_email_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_intents_email_cancel"
        android:text="@string/button_intents_email_cancel_text"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_intents_email_send"
        android:text="@string/button_intents_email_send_text"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
