<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_layouts_relative1"
        android:text="@string/text_layouts_relative1_text"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
    />

    <TextView
        android:id="@+id/text_layouts_relative2"
        android:text="@string/text_layouts_relative2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layouts_relative1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
    />
    <Button
        android:id="@+id/button_layouts_relative_next"
        android:text="@string/button_layouts_relative_next"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
    />
</RelativeLayout>