<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_layouts_intro1"
        android:text="@string/text_layouts_intro1_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_layouts_intro2"
        android:text="@string/text_layouts_intro2_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_layouts_intro1" />

    <TextView
        android:id="@+id/text_layouts_intro3"
        android:text="@string/text_layouts_intro3_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_layouts_intro1" />


</androidx.constraintlayout.widget.ConstraintLayout>